cargo_check_ext.log
    Updating crates.io index
     Locking 39 packages to latest compatible versions
      Adding adler v1.0.2
      Adding base64-simd v0.7.0
      Adding bincode v1.3.3
      Adding cooked-waker v5.0.0
      Adding data-encoding v2.10.0
      Adding deno_core v0.272.0 (available: v0.385.0)
      Adding deno_core_icudata v0.0.73
      Adding deno_ops v0.148.0
      Adding deno_unsync v0.3.10
      Adding fslock v0.2.1
      Adding gzip-header v1.0.0
      Adding heck v0.4.1
      Adding home v0.5.12
      Adding if_chain v1.0.3
      Adding memoffset v0.9.1
      Adding miniz_oxide v0.7.4
      Adding outref v0.1.0
      Adding proc-macro-rules v0.4.0
      Adding proc-macro-rules-macros v0.4.0
      Adding rustc_version v0.2.3
      Adding semver v0.9.0
      Adding semver-parser v0.7.0
      Adding serde_v8 v0.181.0
      Adding simd-abstraction v0.7.1
      Adding sourcemap v7.1.1
      Adding strum v0.25.0
      Adding strum_macros v0.25.3
      Adding unicode-id-start v1.4.0
      Adding v8 v0.89.0
      Adding which v5.0.0
      Adding windows-sys v0.48.0
      Adding windows-targets v0.48.5
      Adding windows_aarch64_gnullvm v0.48.5
      Adding windows_aarch64_msvc v0.48.5
      Adding windows_i686_gnu v0.48.5
      Adding windows_i686_msvc v0.48.5
      Adding windows_x86_64_gnu v0.48.5
      Adding windows_x86_64_gnullvm v0.48.5
      Adding windows_x86_64_msvc v0.48.5
 Downloading crates ...
  Downloaded base64-simd v0.7.0
  Downloaded data-encoding v2.10.0
  Downloaded deno_unsync v0.3.10
  Downloaded strum v0.25.0
  Downloaded which v5.0.0
  Downloaded pin-project v1.1.10
  Downloaded miniz_oxide v0.7.4
  Downloaded if_chain v1.0.3
  Downloaded unicode-id-start v1.4.0
  Downloaded strum_macros v0.25.3
  Downloaded sourcemap v7.1.1
  Downloaded semver v0.9.0
  Downloaded rand_core v0.6.4
  Downloaded pin-project-internal v1.1.10
  Downloaded outref v0.1.0
  Downloaded memoffset v0.9.1
  Downloaded home v0.5.12
  Downloaded heck v0.4.1
  Downloaded rand v0.8.5
  Downloaded fslock v0.2.1
  Downloaded bincode v1.3.3
  Downloaded simd-abstraction v0.7.1
  Downloaded semver-parser v0.7.0
  Downloaded rustc_version v0.2.3
  Downloaded proc-macro-rules-macros v0.4.0
  Downloaded proc-macro-rules v0.4.0
  Downloaded gzip-header v1.0.0
  Downloaded deno_ops v0.148.0
  Downloaded adler v1.0.2
  Downloaded cooked-waker v5.0.0
  Downloaded serde_v8 v0.181.0
  Downloaded deno_core_icudata v0.0.73
  Downloaded deno_core v0.272.0
  Downloaded v8 v0.89.0
    Checking smallvec v1.15.1
   Compiling serde_core v1.0.228
   Compiling serde v1.0.228
   Compiling rustix v0.38.44
   Compiling libc v0.2.182
   Compiling crc32fast v1.5.0
   Compiling linux-raw-sys v0.4.15
   Compiling bitflags v2.11.0
   Compiling num-traits v0.2.19
   Compiling rustversion v1.0.22
   Compiling either v1.15.0
   Compiling home v0.5.12
   Compiling adler v1.0.2
   Compiling miniz_oxide v0.7.4
   Compiling fslock v0.2.1
    Checking icu_normalizer v2.1.1
   Compiling which v5.0.0
   Compiling gzip-header v1.0.0
    Checking futures-sink v0.3.31
    Checking futures-core v0.3.31
    Checking parking_lot_core v0.9.12
   Compiling v8 v0.89.0
    Checking futures-channel v0.3.31
    Checking idna_adapter v1.2.1
    Checking errno v0.3.14
    Checking rand_core v0.6.4
   Compiling heck v0.4.1
    Checking percent-encoding v2.3.2
   Compiling serde_json v1.0.149
   Compiling once_cell v1.21.3
    Checking outref v0.1.0
    Checking num-integer v0.1.46
    Checking futures-util v0.3.31
    Checking simd-abstraction v0.7.1
   Compiling proc-macro-rules-macros v0.4.0
   Compiling strum_macros v0.25.3
    Checking form_urlencoded v1.2.2
    Checking idna v1.1.0
    Checking rand v0.8.5
    Checking signal-hook-registry v1.4.8
    Checking parking_lot v0.12.5
   Compiling thiserror v1.0.69
    Checking mio v1.1.1
    Checking socket2 v0.6.2
   Compiling memoffset v0.9.1
    Checking uuid v1.21.0
    Checking debugid v0.8.0
    Checking tokio v1.49.0
    Checking futures-executor v0.3.31
   Compiling strum v0.25.0
    Checking num-bigint v0.4.6
   Compiling proc-macro-rules v0.4.0
    Checking url v2.5.8
    Checking base64-simd v0.7.0
   Compiling pin-project-internal v1.1.10
    Checking data-encoding v2.10.0
    Checking unicode-id-start v1.4.0
    Checking if_chain v1.0.3
    Checking sourcemap v7.1.1
   Compiling deno_ops v0.148.0
    Checking pin-project v1.1.10
    Checking futures v0.3.31
    Checking bincode v1.3.3
    Checking tracing-core v0.1.36
    Checking cooked-waker v5.0.0
    Checking deno_core_icudata v0.0.73
    Checking tracing v0.1.44
    Checking serde_v8 v0.181.0
    Checking deno_unsync v0.3.10
    Checking deno_core v0.272.0
    Checking forge-extension-host v0.1.0 (/app/crates/forge-extension-host)
warning: unused import: `std::rc::Rc`
 --> crates/forge-extension-host/src/lib.rs:1:5
  |
1 | use std::rc::Rc;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::cell::RefCell`
 --> crates/forge-extension-host/src/lib.rs:2:5
  |
2 | use std::cell::RefCell;
  |     ^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
    --> crates/forge-extension-host/src/lib.rs:18:37
     |
  18 |         self.runtime.run_event_loop(false).await?;
     |                      -------------- ^^^^^ expected `PollEventLoopOptions`, found `bool`
     |                      |
     |                      arguments to this method are incorrect
     |
note: method defined here
    --> /home/jules/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/deno_core-0.272.0/runtime/jsruntime.rs:1615:16
     |
1615 |   pub async fn run_event_loop(
     |                ^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0308`.
warning: `forge-extension-host` (lib) generated 2 warnings
error: could not compile `forge-extension-host` (lib) due to 1 previous error; 2 warnings emitted
